add styling to blocks
co-authored-by: Tom McDowell <tmcdowellddhs@yahoo.com>
dquote> co-authored-by: Emma Gerigscott <elgerig@gmail.com>
dquote> co-authored-by: Kyle Crawford <kcraw217@gmail.com>

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,3 +1,16 @@
 body {
   background-color: lightblue;
 } 
+
+#available {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.blocks {
+  border: 1px solid black;
+  width: 40px;
+  height: 40px;
+  margin: 5px;
+  background-color: blue;
+}
