--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,20 +1,64 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,400;0,700;0,900;1,300&display=swap');
+
 :root {
-  --red: #D62246;
-  --yellow: #F9DC5C;
-  --light: #F0F4F9;
-  --dark: #303A2B;
-  --neutral: #465362;
+  --green: #4d7c0f;
+  --yellow: #fcd34d;
+  --light: #eff6ff;
+  --dark: #172554;
+  --neutral: #737373;
+  --font: "Poppins", sans-serif;
 }
 
 .hidden {
   display: none;
 }
 
-#info-popup {
+body {
+  background-color: var(--light);
+  font-family: var(--font);
+} 
+
+header {
   position: fixed;
-  top: 10%;
-  left: 5%;
-  background-color: lightseagreen;
+  top: 0;
+  padding: 20px;
+  background-color: var(--green);
+  width: 100vw;
+  color: var(--light);
+}
+
+header h1 {
+  font-weight: 900;
+}
+
+header h4 {
+  font-weight: 200;
+  font-style: italic;
+  color: var(--yellow);
+}
+
+.nav {
+  margin-top: 10vh;
+  padding: 2.5em;
+}
+
+.nav form {
+  width: 85vw;
+  display: flex;
+  justify-content: space-between;
+}
+
+.container-main {
+  display: grid;
+  grid-template-columns: repeat(8, 1fr);
+  grid-template-rows: repeat(8, 1fr);
+}
+
+/* popup */
+
+#info-popup {
+  grid-area: 2 / 2 / 7 / 7;
+  background-color: var(--neutral);
   padding: 20px;
 }
 
@@ -40,10 +84,19 @@
   cursor: pointer;
 }
 
+/* week cards */
+#output {
+  grid-area: 1 / 1 / 9 / 6;
+}
 
-body {
-  background-color: lightblue;
-} 
+#week {
+  display: flex;
+  flex-direction: column;
+}
+
+.week-card {
+  
+}
 
 .block-group {
   display: flex;
@@ -51,13 +104,13 @@ body {
 }
 
 .blocks {
-  width: 40px;
-  height: 40px;
+  width: 20px;
+  height: 20px;
   margin: 5px;
-  background-color: var(--yellow);
+  background-color: var(--green);
 }
 
 #goal-list {
-  padding: 20px;
-  float: right;
+  grid-area: 1 / 7 / 9 / 9;
+  z-index: 5;
 }
