--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -157,6 +157,9 @@ header h4 {
   font-size: 1.6em;
   font-weight: 700;
   padding: .4em;
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
 }
 
 .block-group {
@@ -172,3 +175,11 @@ header h4 {
   background-color: var(--green);
 }
 
+.dayResetButton {
+  width: 40px;
+  height: 40px;
+  border-style: none;
+  background-color: red;
+  border-radius: 50%;
+  box-shadow: 2px 2px 2px #4d7c0f; 
+}
