--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -211,11 +211,83 @@ header h4 {
   animation: move 10s linear infinite;
 }
 
+.img3 {
+  position: absolute;
+  z-index: -1;
+  top:10vh;
+  right:20vw;
+  width: 50vw;
+  height: 50vh;
+  background-image: url("../assets/images/grundle.png");
+  background-size: cover;
+  animation: rotate 15s reverse infinite;
+}
+
+.img4 {
+  position: absolute;
+  z-index: -1;
+  width: 50vw;
+  height: 50vh;
+  top: 40vh;
+  background-image: url("../assets/images/punch.png");
+  background-size: cover;
+  animation: rotate 25s alternate-reverse infinite;
+}
+.img5 {
+  position: absolute;
+  z-index: -1;
+  top: 35vh;
+  right: 20vw;
+  width: 70vw;
+  height: 70vh;
+  background-image: url("../assets/images/squirm.png");
+  background-size: cover;
+  animation: moveleft 10s linear infinite;
+}
+.img6 {
+  position: absolute;
+  z-index: -1;
+  top: 35vh;
+  right: 20vw;
+  width: 70vw;
+  height: 70vh;
+  background-image: url("../assets/images/qwamp.png");
+  background-size: cover;
+  animation: diagonal 20s linear infinite;
+}
+
 @keyframes move{
   0% {
-    transform:translateX(-25%);
+    transform:translateX(-100%);
   }
   100% {
-    transform: translateX(25%);
+    transform: translateX(100%);
+  }
+}
+
+@keyframes rotate { 100% {
+  transform:rotate(-360deg);
+}}
+
+@keyframes moveleft{
+  from {
+    -webkit-transform: translateX(100%);
+    transform: translateX(100%);
+  }
+  to {
+    -webkit-transform: translateX(-200%);
+    transform: translateX(-200%);
+  }
+}
+
+@keyframes diagonal {
+  from {
+    -webkit-transform: translateX(-100%) translateY(-100%);
+    transform: translateX(-100%) translateY(-100%);
+  
+  }
+  to {
+    -webkit-transform: translateX(100%) translateY(100%);
+    transform: translateX(100%) translateY(100%);
   }
 }
